--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.8",
+    "html-react-parser": "^5.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hot-toast": "^2.4.1"
   },
