--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-data-table": "^0.1.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hot-toast": "^2.4.1"
