--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "axios": "^1.7.8",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "next": "14.2.20",
+    "react": "18.3.1",
     "react-data-table-component": "^7.6.2",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "18.3.1",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
